--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="test/photo-1586617356423-52763004deac.jpeg" >
+    <img src="test/photo-1586617356423-52763004deac.jpeg" alt="Shoot the Tigers with a camera, not a gun!" >
+    <img src="test/photo-1586617356423-52763004deac.jpeg" alt="Shoot the Tigers with a camera, not a gun!" title="Let's save Tigers">
+
   </body>
 </html>
